<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/textAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="75dp"
        android:text="100 + 100 ="
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuess"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editGuess"
        android:layout_width="88dp"
        android:layout_height="79dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="60dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/secondary_text"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textCursorDrawable="@null"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuess"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonGuess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/textFeedback"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textAddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/textRound"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>